hphp/test/quick/syntax-error.php.expectf

Fatal error: A semicolon (';') is expected here. in %s/syntax-error.php on line 3
